--- a/brofist/assets/css/sass/components/_header.scss
+++ b/brofist/assets/css/sass/components/_header.scss
@@ -1,7 +1,7 @@
 header{
     width: 100%;
     height: 80px; 
-
+    background: #00041A;
     *{
         color: #ffffff;
     }
@@ -24,6 +24,7 @@ header{
             img{
                 width: 100%;
                 max-width: 140px;
+                min-width: 100px;
             }
         }
 
@@ -116,105 +117,148 @@ header{
                         }
                     }
                 }
+            }
+        }
 
-                .language{
-                    position: relative;
+        .language{
+            position: relative;
 
-                    &.open{
-                        .subNavigation{
-                            margin-top: 0;
-                            opacity: 1;
-                            visibility: visible;
-                        }
-                        .active-lang-wrap{
-                            span {
-                                color: #F2CD55;
-                            }
-                        }
-                    }
-
-                    .active-lang-wrap{
-                        display: flex;
-                        align-items: center;
-                        cursor: pointer;
-                        &:hover{
-                            span{
-                                color: #F2CD55;
-                            }
-                        }
-                    }
-
-                    .subNavigation{
-                        margin-top: 8px;
-                        position: absolute;
-                        top: 32px;
-                        left: -12px;
-                        background: #FFFFFF;
-                        border-radius: 5px;
-                        padding: 12px 24px 12px 12px;
-                        opacity: 0;
-                        z-index: 1;
-                        visibility: hidden;
-                        transition: all 0.3s ease;
-
-                        &:after {
-                            content: "\f0d8";
-                            font-family: "Font Awesome 5 Free";
-                            font-weight: 900;
-                            font-size: 24px;
-                            color: #ffffff;
-                            position: absolute;
-                            top: -20px;
-                            right: 4px;
-                        }
-
-                        span{
-                            color: #1B1B1B;
-                        }
-
-                        .lang{
-                            margin-bottom: 10px;
-                            cursor: pointer;
-                            &:hover{
-                                span{
-                                    text-decoration: underline;
-                                }
-                            }
-                            &:last-child{
-                                margin: 0;
-                            }
-                        }
-                    }
-
-                    i{
-                        margin-left: 8px;
-                        font-size: 14px;
-                    }
-                    img{
-                        width: 14px;
-                        height: 14px;
-                        border-radius: 50%;
-                        object-fit: cover;
-                        margin-right: 6px;
-                    }
-
-                    span{
-                        font-weight: 500;
-                        font-size: 14px;
-                        color: #FFFFFF;
-                        transition: all 0.3s ease;
-                    }
-
-                    .lang{
-                        display: flex;
-                        align-items: center;
+            &.open{
+                .subNavigation{
+                    margin-top: 0;
+                    opacity: 1;
+                    visibility: visible;
+                }
+                .active-lang-wrap{
+                    span {
+                        color: #F2CD55;
                     }
                 }
+            }
+
+            .active-lang-wrap{
+                display: flex;
+                align-items: center;
+                cursor: pointer;
+                &:hover{
+                    span{
+                        color: #F2CD55;
+                    }
+                }
+            }
+
+            .subNavigation{
+                margin-top: 8px;
+                position: absolute;
+                top: 32px;
+                left: -12px;
+                background: #FFFFFF;
+                border-radius: 5px;
+                padding: 12px 24px 12px 12px;
+                opacity: 0;
+                z-index: 1;
+                visibility: hidden;
+                transition: all 0.3s ease;
+
+                &:after {
+                    content: "\f0d8";
+                    font-family: "Font Awesome 5 Free";
+                    font-weight: 900;
+                    font-size: 24px;
+                    color: #ffffff;
+                    position: absolute;
+                    top: -20px;
+                    right: 4px;
+                }
+
+                span{
+                    color: #1B1B1B;
+                }
+
+                .lang{
+                    margin-bottom: 10px;
+                    cursor: pointer;
+                    &:hover{
+                        span{
+                            text-decoration: underline;
+                        }
+                    }
+                    &:last-child{
+                        margin: 0;
+                    }
+                }
+            }
+
+            i{
+                margin-left: 8px;
+                font-size: 14px;
+            }
+            img{
+                width: 14px;
+                height: 14px;
+                border-radius: 50%;
+                object-fit: cover;
+                margin-right: 6px;
+            }
+
+            span{
+                font-weight: 500;
+                font-size: 14px;
+                color: #FFFFFF;
+                transition: all 0.3s ease;
+            }
+
+            .lang{
+                display: flex;
+                align-items: center;
             }
         }
     }
 }
 
+
+.m-lines {
+    font-size: 18px;
+    float: right;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    margin-top: 2px;
+
+    .one,
+    .two,
+    .three {
+        width: 18px;
+        height: 2.1px;
+        background: #FFFFFF;
+        margin: 4px auto;
+        backface-visibility: hidden;
+        -moz-transition-duration: 0.3s;
+        -o-transition-duration: 0.3s;
+        -webkit-transition-duration: 0.3s;
+        transition-duration: 0.3s;
+    }
+
+    &.on .one {
+        -moz-transform: rotate(45deg) translate(3px, 3px);
+        -ms-transform: rotate(45deg) translate(3px, 3px);
+        -webkit-transform: rotate(45deg) translate(3px, 3px);
+        transform: rotate(45deg) translate(3px, 3px);
+        width: 22px;
+        height: 3;
+    }
+
+    &.on .three {
+        -moz-transform: rotate(-45deg) translate(4px, -4px);
+        -ms-transform: rotate(-45deg) translate(4px, -4px);
+        -webkit-transform: rotate(-45deg) translate(4px, -4px);
+        transform: rotate(-45deg) translate(4px, -4px);
+        width: 22px;
+        height: 3;
+    }
+
+    &.on .two {
+        opacity: 0;
+    }
+}
 
 // media
 
