--- a/brofist/assets/css/sass/components/_section.scss
+++ b/brofist/assets/css/sass/components/_section.scss
@@ -5,7 +5,11 @@
     flex-direction: column;
     background-image: url(../../images/img3.png);
     background-size: 100% 100%;
+    header{
+        background: transparent;
+    }
 }
+
 section {
     background: #00041A;
     //background: #b9b9b9;
@@ -444,6 +448,18 @@ section {
         max-width: 796px;
     }
 
+    .owl-dots{
+        margin-top: 24px;
+        width: 100%;
+    }
+
+    .owl-item{
+        height: 100%;
+        .item{
+            height: 100%;
+        }
+    }
+
     .item-wrap{
         margin-top: 120px;
         display: flex;
@@ -588,13 +604,22 @@ section {
     .slider{
         margin-top: 100px;
         position: relative;
-        .owl-item.active .img  {
+        .owl-item.active .option {
             -webkit-animation-duration: 1s;
             animation-duration: 1s;
             -webkit-animation-fill-mode: both;
             animation-fill-mode: both;
             animation-name: fadeInUp;
             animation-delay: 0.5s;
+        }
+
+        .owl-item.active .img  {
+            -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+            -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+            animation-name: fadeInUp;
+            animation-delay: 1s;
         }
 
         .owl-item.active .text  {
@@ -634,20 +659,9 @@ section {
                 align-items: center;
                 border-radius: 0px 200px 200px 0px;
                 padding: 16px;
-                &.yellow {
-                    background: #F2CD55;
-                    border-radius: 200px 0px 0px 200px;
-                    flex: 0 0 90%;
-                    padding-left: 140px;
-                    flex-direction: row-reverse;
-                    justify-content: flex-end;
-                    .text {
-                        margin-left: 0;
-                        margin-right: 50px;
-                    }
-                }
-                
-                &.orange {
+
+
+                &:nth-child(1n) {
                     background: #EA5B0C;
                     flex: 0 0 calc(55% - 20px);
                     padding-left: 180px;
@@ -659,7 +673,7 @@ section {
                     }
                 }
 
-                &.white {
+                &:nth-child(2n) {
                     background: #ffffff;
                     border-radius: 200px 0px 0px 200px;
                     flex: 0 0 calc(45% - 20px);
@@ -669,8 +683,31 @@ section {
                     .text{
                         margin-left: 0;
                         margin-right: 50px;
+                        .title,
+                        .description {
+                            color: #1E0049;
+                        }
                     }
                 }
+
+                &:nth-child(3n){
+                    background: #F2CD55;
+                    border-radius: 200px 0px 0px 200px;
+                    flex: 0 0 90%;
+                    padding-left: 140px;
+                    flex-direction: row-reverse;
+                    justify-content: flex-end;
+                    .text {
+                        margin-left: 0;
+                        margin-right: 50px;
+                        .title,
+                        .description {
+                            color: #1E0049;
+                        }
+                    }
+                }
+                
+
                 .img{
                     flex: 0 0 240px;
                     height: 240px;
@@ -892,7 +929,6 @@ section {
             }
 
             .img{
-                margin-bottom: -1px;
                 img{
                     border-radius: 0px 0px 20px 20px;
                 }
@@ -928,9 +964,14 @@ section {
         .owl-item {
             transition: all 0.5s ease;
             opacity: 1;
-            .div {
-                opacity: 0.6;
+
+            .background{
                 background: #00041a8a;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
             }
         }
 
@@ -955,8 +996,7 @@ section {
                 }
             }
 
-            .div {
-                opacity: 1;
+            .background{
                 background: transparent;
             }
         }
@@ -1149,6 +1189,14 @@ section {
             margin-top: -40px;
         }
     }
+
+    .innerItem{
+        display: flex;
+        flex-wrap: wrap;
+        .item{
+            flex: 0 0 33.3%;
+        }
+    }
 }
 
 
@@ -1286,214 +1334,187 @@ section {
     }
 }
 
-
-
-
-
-.popup {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1000008;
-    overflow-x: hidden;
-    overflow-y: auto;
-    background: rgba(0, 0, 0, 0.9);
-    display: none;
-
-    form {
-        margin: 0;
-    }
-
-    .dialog {
-        max-width: 440px;
-        width: -webkit-calc(100% - 32px);
-        width: -moz-calc(100% - 32px);
-        width: calc(100% - 32px);
-        box-sizing: border-box;
-        margin: 48px auto;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
-        min-height: calc(100% - (96px));
-    }
-    
-    
-    .form-box {
-        width: 100%;
-        position: relative;
-        z-index: 1;
-        
-        >.close-popup {
-            width: 38px;
-            height: 38px;
+.news-wrap{
+    padding: 64px 0 100px;
+    .item-wrap{
+        margin-top: 48px;
+        .item{
             display: flex;
-            justify-content: center;
             align-items: center;
-            right: 8px;
-            left: auto;
-            top: 8px;
-            font-size: 24px;
-            cursor: pointer;
-            padding: 0;
-            color: #C4C4C4;
+            padding: 40px 16px;
+            margin-top: 24px;
+            max-width: 90%;
+
+            background: #EA5B0C;
+            border-radius: 0px 200px 200px 0px;
+            flex: 0 0 calc(55% - 20px);
+            padding-left: 180px;
+            .text{
+                .title,
+                .description {
+                    color: #ffffff;
+                }
+            }
+
+            &:nth-child(2n + 2) {
+                background: #ffffff;
+                border-radius: 200px 0px 0px 200px;
+                flex: 0 0 calc(45% - 20px);
+                flex-direction: row-reverse;
+                justify-content: flex-end;
+                padding-left: 100px;
+                margin-left: auto;
+                .text{
+                    margin-left: 0;
+                    margin-right: 50px;
+                    .title,
+                    .description {
+                        color: #1E0049;
+                    }
+                }
+            }
+
+            &:nth-child(3n + 3){
+                background: #F2CD55;
+                border-radius: 0px 200px 200px 0px;
+                flex: 0 0 90%;
+                padding-left: 140px;
+                
+                .text {
+                    .title,
+                    .description {
+                        color: #1E0049;
+                    }
+                }
+            }
             
-            &:hover {
-                color: #EA5B0C;
-            }
-        }
-        
-        
-        
-        .form-box-wrap {
-            background: #fff;
-            border-radius: 25px;
-            padding: 36px;
-
-            h3{
-                font-style: normal;
-                font-weight: 900;
-                font-size: 30px;
-                line-height: 110%;
-                color: #1E0049;
-                text-transform: uppercase;
+            .img{
+                flex: 0 0 240px;
+                height: 240px;
+                overflow: hidden;
+                border-radius: 50%;
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
             }
 
-            .input-wrap{
-                margin-top: 20px;
-                label{
-                    display: block;
+            .text{
+                margin-left: 50px;
+                max-width: 360px;
+                align-items: center;
+                .title{
                     font-style: normal;
-                    font-weight: 500;
-                    font-size: 12px;
+                    font-weight: bold;
+                    font-size: 24px;
                     line-height: 110%;
                     color: #1E0049;
-                    &.required {
+                }
+
+                .description{
+                    margin-top: 16px;
+                    font-style: normal;
+                    font-weight: 300;
+                    font-size: 18px;
+                    line-height: 18px;
+                    color: #1E0049;
+                }
+
+                .date{
+                    margin-top: 24px;
+                    font-style: normal;
+                    font-weight: bold;
+                    font-size: 18px;
+                    line-height: 18px;
+                    color: rgba(30, 0, 73, 0.37);
+                }
+            }
+        }
+    }
+}
+
+.new-wrap{
+    padding: 64px 0 160px;
+    .new-inner{
+        background: #FFFFFF;
+        border-radius: 20px;
+        padding: 64px;
+        .title{
+            font-style: normal;
+            font-weight: 900;
+            font-size: 36px;
+            line-height: 110%;
+            text-transform: uppercase;
+            color: #000000;
+        }
+
+        .date{
+            margin-top: 16px;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 18px;
+            line-height: 18px;
+            color: #C4C4C4;
+        }
+
+        .breadcrumb{
+            margin-top: 32px;
+            ul{
+                display: flex;
+                li{
+                    &:after {
+                        background: url(../../images/icon12.png);
+                        content: "";
+                        display: inline-block;
+                        margin: 0 8px;
+                        width: 15px;
+                        height: 7px;
+                        background-size: 100% 100%;
+                    }
+
+                    &:last-child{
                         &:after {
-                            content: "*";
-                            color: red;
-                            font-size: 16px;
-                            display: inline-block;
-                            line-height: 0;
-                            margin-left: 4px;
+                            background: none;
                         }
                     }
-                }
 
-                input{
-                    width: 100%;
-                    padding: 16px 20px;
-                    margin-top: 8px;
-                    background: #FFFFFF;
-                    border: 1px solid #E5E5E5;
-                    box-sizing: border-box;
-                    border-radius: 100px;
-                    outline: none;
-                    &.error {
-                        border-color: #FF0000;
-                    }
-                }
-            }
-
-            .btn{
-                display: block;
-                font-weight: bold;
-                padding: 16px 70px;
-                font-size: 16px;
-                margin: 32px auto 0;
-            }
-
-            .check-wrap {
-                margin-top: 16px;
-
-                .check {
-                    margin-top: 12px;
-
-                    label {
-                        display: flex;
-                        align-items: center;
-                        cursor: pointer;
-
-                        input[type=checkbox] {
-                            display: none;
-
-                            &:checked+span:after {
-                                opacity: 1;
-                            }
-                        }
-
-                        span {
-                            display: block;
-                            flex: 0 0 16px;
-                            height: 16px;
-                            cursor: pointer;
-                            border-radius: 50px;
-                            position: relative;
-                            background: #ffffff;
-                            border: solid 2px #EA5B0C;
-
-                            &:after {
-                                content: '';
-                                width: 14px;
-                                height: 14px;
-                                position: absolute;
-                                top: -1px;
-                                left: -1px;
-                                background: #EA5B0C;
-                                opacity: 0;
-                                border-radius: 50px;
-                            }
-                        }
-
-                        p {
-                            margin: 5px 8px 0;
-                            font-style: normal;
-                            font-weight: 400;
-                            font-size: 12px;
-                            line-height: 110%;
-                            color: #1E0049;
-                        }
-
-                        a {
+                    a{
+                        font-style: normal;
+                        font-weight: 500;
+                        font-size: 14px;
+                        line-height: 14px;
+                        color: #1B1B1B;
+                        transition: 0.3s;
+                        &:hover{
                             color: #EA5B0C;
                         }
                     }
                 }
             }
+        }
 
-            .reset-password{
-                display: block;
-                margin-top: 16px;
-                font-weight: 300;
-                font-size: 12px;
-                line-height: 110%;
-                text-align: center;
-                text-decoration-line: underline;
-                color: #000000;
+        .info{
+            margin-top: 32px;
+            .img{
+                img{
+                    width: 100%;
+                    border-radius: 20px;
+                }
             }
 
-            .error-message{
-                margin-top: 24px;
-                text-align: center;
-                font-style: normal;
-                font-weight: 300;
-                font-size: 14px;
-                line-height: 110%;
-                color: #FF0000;
+            .description{
+                margin-top: 48px;
+                p{
+                    margin-top: 16px;
+                    font-style: normal;
+                    font-weight: 300;
+                    font-size: 16px;
+                    line-height: 16px;
+                    color: #000000;
+                }
             }
         }
     }
-
-    .close-popup {
-        position: absolute;
-        z-index: 0;
-        width: 100%;
-        height: 100%;
-        left: 0;
-        top: 0;
-    }
 }
+ 
