--- a/brofist/assets/css/sass/main.scss
+++ b/brofist/assets/css/sass/main.scss
@@ -92,12 +92,16 @@ a {
     font-size: 18px;
     line-height: 18px;
     color: #FFFFFF;
+    transition: 0.3s;
+    &:hover{
+        box-shadow: 0px 0px 14px #ea5b0c;
+    }
 }
 
 .innerWrap {
     position: relative;
     max-width: 1450px;
-    padding: 0 8px;
+    padding: 0 16px;
     margin: 0 auto;
 }
  
@@ -157,6 +161,7 @@ a {
 
 @import 'components/header';
 @import 'components/section';
+@import 'components/popup';
 @import 'components/footer';
 @import 'components/responsive';
 
